--- a/style.css
+++ b/style.css
@@ -1,88 +1,2 @@
-:root {
-    box-sizing: border-box;
-    --distance-to-opacity: 12em;
-    background-color: aliceblue;
-    --odin-font-family: url(font/Norse-Bold.otf);
-
-}
-html, body {
-    margin: 0;
-    padding: 0;
-}
-@font-face {
-    font-family: 'Odin-Font';
-    src: url(font/Norse-Bold.otf);
-}
-.container{
-    display: flex;
-    /* align-items: center;
-    justify-content: space-around; */
-}
-/* .container div {
-    height: 100vh;
-} */
-
-.left-container {
-    /* flex: 2; */
-
-    width: 550px;
-    height: 100vh;
-    background-image: url(images/FormValidationImage.jpg);
-    background-repeat: no-repeat;
-
-
-}
-.right-container {
-    flex: 3;
-}
-.top-text-content {
-    margin: 9em 6em 4em 6em;
-    font-size: 1.1em;
-}
-#bikes-div {
-    margin-top: var(--distance-to-opacity, 100px);
-    width: 100%;
-    height: 8rem;
-    background: black;
-    opacity: 0.2;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-#bikes-div>* {
-    display: inline-flex;
-    font-size: 2rem;
-    font-weight: 800;
-    width: 100px;
-    color: white;
-    opacity: 1;
-    margin: 0;
-    vertical-align: middle;
-    text-align: center;
-    height: 80%;
-    align-items: center;
-    justify-content: center; 
-    font-family: 'Odin-Font';
-}
-#bikes-div>img {
-    max-width: 100%;
-    max-height: 100%;
-    display: block;
-}
-#form-div {
-    background-color: white;
-    padding-left: 3em;
-    box-shadow: 2px 4px 1px grey;
-}
-#form-id {
-    padding: 1em;
-}
-.form-field-container {
-    display: flex;
-    margin: 4px 0px 4px 0px;
-}
-.form-field-container > * {
-    flex: 1;
-    font-size: 0.9em;
-    font-family: sans-serif;
-}
+@import url('styles/basic-layout.css');
+@import url('styles/form-validation-style.css');
