--- a/styles/basic-layout.css
+++ b/styles/basic-layout.css
@@ -39,8 +39,12 @@ html, body {
     flex: 3;
 }
 .top-text-content {
-    margin: 9em 6em 4em 6em;
+    padding: 9em 6em 4em 6em;
     font-size: 1.1em;
+}
+.right-top-section {
+    box-shadow: inset 0px -1px 2px grey;
+    margin-bottom: 2px;
 }
 #bikes-div {
     margin-top: var(--distance-to-opacity, 100px);
@@ -80,7 +84,7 @@ html, body {
     flex-direction: column;
 }
 #form-id {
-    padding: 1em;
+    margin: 0;
 }
 .form-field-container {
     display: flex;
@@ -106,6 +110,15 @@ button {
     border-radius: 4px;
     padding: 1em 1em;
     font-weight: 700;
+    margin: 2em 3em;
+}
+.has-account {
+
+
+    font-weight: 500;
+    margin-top: 2em;
+    margin-left: 3em;
+
 }
 a {
     color: var(--button-color);
